--- a/src/Api.css
+++ b/src/Api.css
@@ -1,7 +1,7 @@
 .divContainer {
-    background-color: rgba(255, 245, 245, 0.891);
-    
+    background-color: rgba(37, 31, 31, 0.891);
     text-align: center;
+    width: 100%;
 }
 
 .divForm {
@@ -9,18 +9,19 @@
     position: sticky;
     top:0;
     padding: 20px;
-    border-bottom: 4px solid rgba(226, 223, 223, 0.802);
+    border-bottom: 4px solid rgb(255, 255, 255);
 }
 
 .buttonSearch {
-    font-weight: 700;
+    font-weight: 400;
+    font-size: 20px;
     height: 30px;
     margin-left: 8px;
     border: none;
     background-color: rgb(38, 128, 155);
     border-radius: 5px;
     box-shadow: 1px 1px 2px 2px rgba(20, 135, 197, 0.941);
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     cursor:pointer;
 }
 
@@ -37,32 +38,39 @@
     border-radius: 5px;
 }
 
-.container-card {
-    display: flex; 
-    flex-wrap: wrap;
-    margin: 5px;
+
+
+
+
+.buttonUsuario {
+    margin: 200px 30%;
+    font-weight: 700;
+    font-size: 25px;
+    height: 300px;
+    width: 600px;
+    border: 1px solid white;
+    padding: 100px;
+    background-color: rgb(38, 128, 155);
+    border-radius: 10%;
+    box-shadow: 1px 1px 2px 2px rgba(20, 135, 197, 0.941);
+    color: rgb(255, 253, 253);
+    cursor:pointer;
 }
 
-.movie-card {
-    box-shadow: 1px 1px 1px 3px rgb(159, 148, 148);
-    padding: 20px;
-    border-radius: 50% 20% 50% 50%;
-    width:  250px;
-    height: 340px;
-    margin: 20px;
-    color:rgb(0, 0, 0);
-    background-color: rgba(250, 250, 250, 0.928);
-    user-select: none;
-    cursor: pointer;
-    font-size: 12px;
+
+.divGeneral {
+    display:flex;   
 }
 
-.movie-card:hover {
-    box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.993);
-    /* border-radius: 20px 20px 100% 100%; */
-}
-
-.img-movie {
-    width: 180px;
-    border-radius: 0px  0px 15px 15px;
+.divHome {
+    display: flex;
+    position: fixed;
+    top:0;
+    max-width: 150px;
+    z-index:99;
+    margin: 3px 0px 50px 5px;
+    padding: 5px;
+    border-radius: 10px;
+    border:1px solid rgb(53, 49, 49);
+    background-color: rgb(0, 0, 0);
 }
